Fixed player classes

--- a/Castle/Assembly-CSharp-vs.csproj
+++ b/Castle/Assembly-CSharp-vs.csproj
@@ -188,8 +188,8 @@
      <Compile Include="Assets\SampleAssets\Vehicles\Car\Scripts\Wheel.cs" />
      <Compile Include="Assets\SampleAssets\Vehicles\RollerBall\Scripts\Ball.cs" />
      <Compile Include="Assets\SampleAssets\Vehicles\RollerBall\Scripts\BallUserControl.cs" />
-     <Compile Include="Assets\scripts\Platformer2DUserControl.cs" />
      <Compile Include="Assets\scripts\PlayerCharacter.cs" />
+     <Compile Include="Assets\scripts\PlayerUserControl.cs" />
      <None Include="Assets\SampleAssets\Effects\Projectors\ProjectorGuidelines.txt" />
      <None Include="Assets\SampleAssets\Effects\GlassRefraction (Pro Only)\Shaders\GlassStainedBumpDistort.shader" />
      <None Include="Assets\SampleAssets\Effects\ImageEffects (Pro Only)\Shaders\_BloomAndFlares\BlendOneOne.shader" />
